--- a/src/components/Magzine.css
+++ b/src/components/Magzine.css
@@ -155,11 +155,13 @@
 @media screen and (max-width:460px) {
     .inner-wrapper {
         height: 50vh;
+        padding-bottom: 40px;
     }
 
     .pseudo-item {
-        height: 80%;
+        height: 100%;
         padding-bottom: 0px;
+
     }
 
     .pseudo-item img {
